src/test/testData/parser/error/inForBody.lama
fun array_to_list () {

  for var a = 3; 5, b, c do
    ,,,
  od;

  a[a[5] - 5];

  for a, b, c do
    skip
  od
}